--- a/style.css
+++ b/style.css
@@ -495,14 +495,270 @@ input:checked + .slider:before {
 }
 
 .profile-img {
-  height: fit-content;
+  width: 230px;
+  height: 250px;
   position: relative;
+  background: url("./img/us.jpg") no-repeat center center / cover;
+  overflow: hidden;
 }
 
-.profile-img img {
+.glitch {
+  background: url("./img/us.jpg") no-repeat center center / cover;
+  background-blend-mode: none;
+  background-color: transparent;
+  width: calc(100% + 10px);
+  height: calc(100% + 10px);
+  pointer-events: none;
+
+  position: absolute;
+  top: 0;
+  left: -10px;
+  transform: translate3d(0, 0, 0);
+  animation-duration: 1s;
+  animation-delay: 0;
+  animation-timing-function: linear;
+  /* animation-iteration-count: infinite; */
+  animation-fill-mode: forwards;
+}
+
+
+
+.profile-img:hover .glitch:nth-child(1) {
+  animation-name: glitch-anim-1;
+  z-index: 1;
+}
+
+.profile-img:hover .glitch:nth-child(2) {
+  animation-name: glitch-anim-2;
+  z-index: 1;
+}
+
+.profile-img:hover .glitch:nth-child(3) {
+  animation-name: glitch-anim-3;
+  z-index: 1;
+}
+
+@keyframes glitch-anim-1 {
+	0% { 
+		opacity: 1;
+		transform: translate3d(10px, 0, 0) scale3d(1, 1, 1);
+		clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
+	}
+  
+	20% {
+		clip-path: polygon(0 97%, 100% 97%, 100% 100%, 0% 100%);
+	}
+  
+	30% {
+		clip-path: polygon(0 83%, 100% 83%, 100% 85%, 0% 85%);
+	}
+  
+	40% {
+		clip-path: polygon(0 88%, 100% 88%, 100% 90%, 0% 90%);
+	}
+  
+	50% {
+		clip-path: polygon(0 95%, 100% 95%, 100% 90%, 0% 90%);
+	}
+  
+	55% {
+		clip-path: polygon(0 95%, 100% 95%, 100% 94%, 0% 94%);
+	}
+  
+	60% {
+    clip-path: polygon(0 70%, 100% 70%, 100% 75%, 0% 75%);
+    filter: hue-rotate(90deg);
+  }
+
+  65% {
+    clip-path: polygon(0 75%, 100% 75%, 100% 85%, 0% 85%);
+    filter: hue-rotate(90deg);
+	}
+
+ 	70% {
+
+		clip-path: polygon(0 70%, 100% 70%, 100% 65%, 0% 65%);
+	}
+
+	80% {
+		clip-path: polygon(0 80%, 100% 80%, 100% 90%, 0% 90%);
+	}
+
+	85% {
+		clip-path: polygon(0 75%, 100% 75%, 100% 75%, 0 75%);
+	}
+
+	95% {
+    clip-path: polygon(0 72%, 100% 72%, 100% 78%, 0 78%);
+  } 
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes glitch-anim-2 {
+	0% { 
+		transform: translate3d(2px, 0, 0);
+		clip-path: polygon(0 25%, 100% 25%, 100% 30%, 0 30%);
+	}
+  
+	10% {
+		clip-path: polygon(0 3%, 100% 3%, 100% 3%, 0 3%);
+	}
+  
+	15% {
+		clip-path: polygon(0 5%, 100% 5%, 100% 20%, 0 20%);
+	}
+  
+	17% {
+    clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
+	}
+  
+	19% {
+		clip-path: polygon(0 40%, 100% 40%, 100% 40%, 0 40%);
+	}
+  
+	33% {
+    clip-path: polygon(0 52%, 100% 52%, 100% 59%, 0 59%);
+
+	}
+  
+	35% {
+		clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
+	}
+  
+	40% {
+    clip-path: polygon(0 75%, 100% 75%, 100% 75%, 0 75%);
+
+	}
+  
+	45% {
+		clip-path: polygon(0 65%, 100% 65%, 100% 40%, 0 40%);
+	}
+  
+	49% {
+    clip-path: polygon(0 45%, 100% 45%, 100% 50%, 0 50%);
+    
+	}
+  
+	50% {
+		clip-path: polygon(0 14%, 100% 14%, 100% 33%, 0 33%);
+	}
+  
+	55% {
+    clip-path: polygon(0 15%, 100% 15%, 100% 35%, 0 35%);
+    
+	}
+  
+	60% {
+    clip-path: polygon(0 15%, 100% 15%, 100% 15%, 0 15%);
+    filter: hue-rotate(90deg);
+	}
+  
+	70% {
+    clip-path: polygon(0 65%, 100% 65%, 100% 60%, 0 60%);
+    filter: hue-rotate(90deg);
+	}
+  
+	80% {
+		clip-path: polygon(0 80%, 100% 80%, 100% 85%, 0 85%);
+	}
+  
+	90% {
+    clip-path: polygon(0 55%, 100% 55%, 100% 65%, 0 65%);
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes glitch-anim-3 {
+	0% {
+		opacity: 1;
+		transform: translate3d(0, -2px, 0) scale3d(1, 1, 1);
+		clip-path: polygon(0 1%, 100% 1%, 100% 3%, 0 3%);
+	}
+  
+	5% {
+		clip-path: polygon(0 10%, 100% 10%, 100% 9%, 0 9%);
+	}
+  
+	11% {
+		clip-path: polygon(0 5%, 100% 5%, 100% 6%, 0 6%);
+	}
+  
+	20% {
+		clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
+	}
+  
+	25% {
+		clip-path: polygon(0 10%, 100% 10%, 100% 10%, 0 10%);
+	}
+  
+	35% {
+		clip-path: polygon(0 30%, 100% 30%, 100% 25%, 0 25%);
+	}
+  
+	42% {
+		clip-path: polygon(0 15%, 100% 15%, 100% 16%, 0 16%);
+	}
+  
+	48% {
+		clip-path: polygon(0 40%, 100% 40%, 100% 39%, 0 39%);
+	}
+  
+	50% {
+		clip-path: polygon(0 20%, 100% 20%, 100% 21%, 0 21%);
+	}
+  
+	56% {
+		clip-path: polygon(0 60%, 100% 60%, 100% 55%, 0 55%);
+	}
+  
+	61% {
+		clip-path: polygon(0 30%, 100% 30%, 100% 31%, 0 31%);
+	}
+  
+	68% {
+		clip-path: polygon(0 70%, 100% 70%, 100% 69%, 0 69%);
+	}
+  
+	72% {
+		clip-path: polygon(0 40%, 100% 40%, 100% 41%, 0 41%);
+	}
+  
+	77% {
+		clip-path: polygon(0 80%, 100% 80%, 100% 75%, 0 75%);
+	}
+  
+	81% {
+		clip-path: polygon(0 50%, 100% 50%, 100% 51%, 0 51%);
+	}
+  
+	86% {
+		clip-path: polygon(0 90%, 100% 90%, 100% 90%, 0 90%);
+	}
+  
+	90% {
+		clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
+	}
+  
+	92% {
+		clip-path: polygon(0 100%, 100% 100%, 100% 99%, 0 99%);
+	}
+  
+	94% {
+    clip-path: polygon(0 70%, 100% 70%, 100% 71%, 0 71%);
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+/* .profile-img img {
   width: 230px;
   opacity: 0.4;
-}
+} */
 
 .profile-img .profile-img-border {
   content: '';
@@ -521,7 +777,7 @@ input:checked + .slider:before {
   top: -1px;
   left: -1px;
   width: 230px;
-  height: 274px;
+  height: 254px;
   fill: transparent;
 }
 .profile-img-border svg rect {
@@ -538,14 +794,14 @@ input:checked + .slider:before {
   stroke: var(--heading);
   stroke-width: 6;
   stroke-dasharray: 600;
-  stroke-dashoffset: 365;
+  stroke-dashoffset: 400;
 }
 
-.profile-img:hover .profile-img-border svg rect {
+/* .profile-img:hover .profile-img-border svg rect {
   
   animation: anim 700ms linear forwards;
   
-}
+} */
 
 @keyframes anim {
   100% {
@@ -907,13 +1163,6 @@ select:-webkit-autofill:focus {
   /* animation: info-btn-anim 300ms linear forwards; */
     stroke-dasharray: 141 5;
     stroke-dashoffset: 161.5;
-}
-
-@keyframes info-btn-anim {
-  100% { 
-    stroke-dasharray: 141 5;
-    stroke-dashoffset: 88.5;
-  }
 }
 
 .project:hover .project-title,
