--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ html {
   --scrollbar: #858585;
   --scrollbar-track: #4b4a4a;
   --menu-color: #131416;
-  --carousel-nav: #21252bc4;
+  --shadow-nav: #181d25;
 }
 
 [data-theme="light"] {
   --bg-color: #bfc0bc;
-  --primary: #272c33;
+  --primary: #34393f;
   --border-color: #13141677; 
   --bg-dark: #b9b9b7;
   --secondary: #3d4250;
@@ -34,8 +34,8 @@ html {
   /* --heading: #29a5ce; */
   --scrollbar: #4b4a4a;
   --scrollbar-track: #858585;
-  --menu-color: #eeeeee;
-  --carousel-nav: #bfc0bc8f;
+  --menu-color: #dfdede;
+  --shadow-nav: #3f3f383b;
 }
 
 body {
@@ -47,15 +47,16 @@ body {
 
 section {
   position: relative;
-  padding: 0 150px 100px 150px;
+  padding: 50px 150px 100px 150px;
   max-width: 1400px;
   margin: 0 auto;
 }
 
 
-section:nth-child(1) {
+.home {
   min-height: 100vh;
   padding-top: 0;
+  position: unset;
 }
 
 section:nth-child(2) {
@@ -294,7 +295,7 @@ svg line {
 
 .menu-button {
   position: fixed;
-  z-index: 4;
+  z-index: 5;
   right: 35px;
   top: 35px;
   display: none;
@@ -337,8 +338,21 @@ svg line {
 nav {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
-  padding-top: 30px;
+  justify-content: space-between;
+  padding: 30px 80px 0;
+  position: sticky;
+  top: -65px;
+  background: var(--bg-color);
+}
+
+.menu-on-scroll-up {
+  transition: top 0.3s;
+  top: 0;
+  padding: 10px 80px 10px;
+  -webkit-box-shadow: 10px 5px 11px -2px var(--shadow-nav);
+  -moz-box-shadow: 10px 5px 11px -2px var(--shadow-nav);
+  box-shadow: 10px 5px 11px -2px var(--shadow-nav);
+  z-index: 999;
 }
 
 nav ul {
@@ -370,22 +384,27 @@ nav ul li a {
   text-decoration: none;
   color: var(--primary);
   font-size: 20px;
-  text-transform: capitalize;
+  text-transform: lowercase;
   font-family: 'Teko', sans-serif;
   letter-spacing: 2px;
 }
 
 
 
-nav ul li:nth-child(5) a {
-  padding: 3px 10px;
+/* nav ul li:nth-child(5) a {
+  padding: 0 10px;
   border: 2px solid var(--heading);
+} */
+nav ul li:nth-child(5) a {
+
 }
+
 
 nav ul li a span {
   color: var(--heading);
   margin-right: 5px;
   transition: 0.3s;
+  font-size: 16px;
 }
 
 nav ul li a:hover {
@@ -403,10 +422,10 @@ nav ul li a:hover {
 }
 
 .theme-switch-wrapper {
-  position: absolute;
-  z-index: 4;
-  left: 30px;
-  top: 30px;
+  position: relative;
+  z-index: 3;
+  left: 0;
+  top: 0;
   display: flex;
   align-items: center;
 }
@@ -495,11 +514,11 @@ input:checked + .slider:before {
 }
 
 .profile-img {
-  width: 230px;
+  min-width: 230px;
   height: 250px;
   position: relative;
   background: url("./img/us.jpg") no-repeat center center / cover;
-  overflow: hidden;
+
 }
 
 .glitch {
@@ -531,7 +550,7 @@ input:checked + .slider:before {
 .profile-img:hover .glitch:nth-child(2) {
   animation-name: glitch-anim-2;
   z-index: 1;
-}
+} 
 
 .profile-img:hover .glitch:nth-child(3) {
   animation-name: glitch-anim-3;
@@ -546,19 +565,19 @@ input:checked + .slider:before {
 	}
   
 	20% {
-		clip-path: polygon(0 97%, 100% 97%, 100% 100%, 0% 100%);
+		clip-path: polygon(0 99%, 100% 99%, 100% 100%, 0% 100%);
 	}
   
 	30% {
-		clip-path: polygon(0 83%, 100% 83%, 100% 85%, 0% 85%);
+		clip-path: polygon(0 84%, 100% 84%, 100% 85%, 0% 85%);
 	}
   
 	40% {
-		clip-path: polygon(0 88%, 100% 88%, 100% 90%, 0% 90%);
+		clip-path: polygon(0 55%, 100% 55%, 100% 55%, 0% 55%);
 	}
   
 	50% {
-		clip-path: polygon(0 95%, 100% 95%, 100% 90%, 0% 90%);
+		clip-path: polygon(0 92%, 100% 92%, 100% 90%, 0% 90%);
 	}
   
 	55% {
@@ -566,22 +585,22 @@ input:checked + .slider:before {
 	}
   
 	60% {
-    clip-path: polygon(0 70%, 100% 70%, 100% 75%, 0% 75%);
-    filter: hue-rotate(90deg);
+    clip-path: polygon(0 70%, 100% 70%, 100% 71%, 0% 71%);
+    /* filter: hue-rotate(90deg); */
   }
 
   65% {
-    clip-path: polygon(0 75%, 100% 75%, 100% 85%, 0% 85%);
-    filter: hue-rotate(90deg);
+    clip-path: polygon(0 75%, 100% 75%, 100% 76%, 0% 76%);
+    /* filter: hue-rotate(90deg); */
 	}
 
  	70% {
 
-		clip-path: polygon(0 70%, 100% 70%, 100% 65%, 0% 65%);
+		clip-path: polygon(0 70%, 100% 70%, 100% 69%, 0% 69%);
 	}
 
 	80% {
-		clip-path: polygon(0 80%, 100% 80%, 100% 90%, 0% 90%);
+		clip-path: polygon(0 89%, 100% 89%, 100% 90%, 0% 90%);
 	}
 
 	85% {
@@ -652,12 +671,12 @@ input:checked + .slider:before {
   
 	60% {
     clip-path: polygon(0 15%, 100% 15%, 100% 15%, 0 15%);
-    filter: hue-rotate(90deg);
+    /* filter: hue-rotate(90deg); */
 	}
   
 	70% {
     clip-path: polygon(0 65%, 100% 65%, 100% 60%, 0 60%);
-    filter: hue-rotate(90deg);
+    /* filter: hue-rotate(90deg); */
 	}
   
 	80% {
@@ -755,62 +774,26 @@ input:checked + .slider:before {
   }
 }
 
-/* .profile-img img {
-  width: 230px;
-  opacity: 0.4;
-} */
-
-.profile-img .profile-img-border {
+.profile-img:before {
   content: '';
   position: absolute;
   bottom: -6px;
-  left: 10px;
+  left: 5px;
   width: 100%;
   height: 100%;
   border: 1px solid var(--border-color);
   z-index: -1;
 }
 
-
-.profile-img-border svg {
+.glitch-wrap {
   position: absolute;
-  top: -1px;
-  left: -1px;
-  width: 230px;
-  height: 254px;
-  fill: transparent;
-}
-.profile-img-border svg rect {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  fill: transparent;
+  top: 0;
+  left: 0;
+  overflow: hidden;
 }
 
-
-.profile-img-border svg rect {
-  stroke: var(--heading);
-  stroke-width: 6;
-  stroke-dasharray: 600;
-  stroke-dashoffset: 400;
-}
-
-/* .profile-img:hover .profile-img-border svg rect {
-  
-  animation: anim 700ms linear forwards;
-  
-} */
-
-@keyframes anim {
-  100% {
-    stroke: var(--heading);
-    stroke-dasharray:  600;
-    stroke-dashoffset: 975;
-    /* stroke-dashoffset: 25; */
-  }
-}
 .about-text-and-tech {
   margin-right: 50px;
 }
@@ -829,8 +812,8 @@ input:checked + .slider:before {
   width: fit-content;
   padding: 2px 15px;
   margin-bottom: 10px;
-  background: var(--heading);
-  color: var(--bg-color);
+  background: var(--bg-dark);
+  color: var(--scrollbar);
   font-weight: bold;
 }
 
@@ -860,9 +843,9 @@ input:checked + .slider:before {
   width: 50%;
   background: var(--bg-dark);
   padding: 30px 40px;
-  -webkit-box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
-  -moz-box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
-  box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
+  -webkit-box-shadow: 10px 10px 11px -2px var(--shadow-nav);
+  -moz-box-shadow: 10px 10px 11px -2px var(--shadow-nav);
+  box-shadow: 10px 10px 11px -2px var(--shadow-nav);
   max-width: 500px;
 }
 
@@ -924,10 +907,12 @@ label {
   display: block;
   position: absolute;
   left: 10px;
-  -webkit-transform: translate(0px, -230px) scale(1.2);
-  -ms-transform: translate(0px, -230px) scale(1.2);
-  transform: translate(0px, -230px) scale(1.2);
+  top: 102px;
+  -webkit-transform: translate(0px, 20px) scale(1.2);
+  -ms-transform: translate(0px, 20px) scale(1.2);
+  transform: translate(0px, 20px) scale(1.2);
   transition: 0.5s;
+  z-index: 1;
 }
 
 #input-name:focus,
@@ -962,9 +947,9 @@ textarea:focus {
 
 textarea:not(:placeholder-shown) ~ #label-message,
 textarea:focus ~ #label-message {
-  -webkit-transform: translate(-5px, -253px) scale(1);
-  -ms-transform: translate(-5px, -253px) scale(1);
-  transform: translate(-5px, -253px) scale(1);
+  -webkit-transform: translate(-5px, -0px) scale(1);
+  -ms-transform: translate(-5px, -0px) scale(1);
+  transform: translate(-5px, -0px) scale(1);
   color: var(--heading);
 }
 
@@ -985,11 +970,10 @@ select:-webkit-autofill:focus {
 .built-by {
   width: 100%;
   text-align: center;
-
   position: absolute;
   bottom: 20px;
   left: 0;
-  /* margin: 50px 0 50px 0; */
+  font-size: 17px;
 }
 
 /* *********************************************** project */
@@ -1007,9 +991,9 @@ select:-webkit-autofill:focus {
   margin: 10px auto;
   position: relative;
   /* border: 5px solid var(--bg-color); */
-    -webkit-box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
-  -moz-box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
-  box-shadow: 10px 10px 11px -2px rgba(0,0,0,0.35);
+    -webkit-box-shadow: 10px 10px 11px -2px var(--shadow-nav);
+  -moz-box-shadow: 10px 10px 11px -2px var(--shadow-nav);
+  box-shadow: 10px 10px 11px -2px var(--shadow-nav);
 
   /* padding-top: 45px; */
 }
@@ -1075,9 +1059,9 @@ select:-webkit-autofill:focus {
 
 .project-up-octagon {
   position: absolute;
-  top: 0px;
+  top: 2px;
   transform: translateY(-100%);
-  height: 10px;
+  height: 12px;
   width: 40%;
   background: var(--bg-dark);
   /* clip-path: polygon(15% 0, 85% 0, 100% 100%, 0% 100%); */
@@ -1226,11 +1210,6 @@ button svg {
   overflow: hidden;
 }
 
-.active img:hover {
-  transition: 300ms; 
-  transform: scale(1.2);
-}
-
 .title-and-tech {
 
 }
@@ -1281,6 +1260,13 @@ button svg {
   transform: translate(0, 0);
   filter: brightness(70%);
   z-index: -10;
+}
+
+.active img {
+  transition: 300ms; 
+}
+.active img:hover {
+  transform: scale(1.2);
 }
 
 
@@ -1374,9 +1360,10 @@ button svg {
 } 
 
 #modul-description {
-  height: 130px;
+  height: 125px;
   overflow-y: auto;
   padding-right: 10px;
+  font-size: 16px;
 }
 
 #modul-description::-webkit-scrollbar {
@@ -1401,7 +1388,7 @@ button svg {
 
 #demo-git-buttons {
   position: absolute;
-  bottom: 10px;
+  bottom: 8px;
   right: 10px;
   z-index: 2;
 }
@@ -1427,11 +1414,34 @@ button svg {
   fill: var(--heading)
 }
 
+/* *************************************** animations */
+
+.enter-up {
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+.enter-down {
+  opacity: 0;
+  transform: translateY(-20px);
+}
+
+.fade-enter {
+  animation: fade-enter-anim 300ms forwards ease-out;
+}
+
+@keyframes fade-enter-anim {
+  100% {
+    transition: 300ms;
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 
 /* *********************************************** media query */
 @media(max-width: 1050px) {
   section {
-    padding: 0 80px 100px 80px;
+    padding: 50px 80px 100px 80px;
   }
 
   .contact-text-and-info {
@@ -1449,6 +1459,11 @@ button svg {
 }
 
 @media(max-width: 800px) {
+  .theme-switch-wrapper {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+  }
   .contact .section-content {
     display: flex;
     flex-direction: column;
@@ -1590,55 +1605,18 @@ button svg {
     margin-bottom: 30px;
   }
   .profile-img {
-    width: 210px;
-    opacity: 0.6;
+    min-width: 210px;
   }
   .profile-img img {
     width: 100%;
   }
-  .profile-img-border svg {
-    width: 211px;
-    height: 231px;
-  }
-
-  .profile-img-border svg rect {
-    stroke-dasharray: 610;
-    stroke-dashoffset: 455;
-    width: 100%;
-    height: 100%;
-  }
-  @keyframes anim {
-    100% {
-      stroke: var(--heading);
-      stroke-dasharray:  580;
-      stroke-dashoffset: 990;
-    }
+  .built-by {
+    position: relative;
+    margin-top: 50px;
   }
 }
 
-/*  animations */
 
-.enter-up {
-  opacity: 0;
-  transform: translateY(20px);
-}
-
-.enter-down {
-  opacity: 0;
-  transform: translateY(-20px);
-}
-
-.fade-enter {
-  animation: fade-enter-anim 300ms forwards ease-out;
-}
-
-@keyframes fade-enter-anim {
-  100% {
-    transition: 300ms;
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
 
 @media(max-width: 500px) {
   section {
@@ -1788,7 +1766,9 @@ button svg {
   .project-modul-info {
     padding: 25px 10px 25px 10px;
   }
-
+  .tech-list p {
+    font-size: 16px;
+  }
 }
 
 /* link button on hover dont work */
