--- a/style.css
+++ b/style.css
@@ -24,10 +24,10 @@ html {
   --shadow-nav: #181d25;
 }
 
-[data-theme="light"] {
+[data-theme='light'] {
   --bg-color: #bfc0bc;
   --primary: #34393f;
-  --border-color: #13141677; 
+  --border-color: #13141677;
   --bg-dark: #b9b9b7;
   --secondary: #3d4250;
   --heading: #ce7329;
@@ -52,7 +52,6 @@ section {
   margin: 0 auto;
 }
 
-
 .home {
   min-height: 100vh;
   padding-top: 0;
@@ -72,7 +71,7 @@ p {
   font-weight: 600;
   max-width: 350px;
   max-height: 400px;
-  font-family: "Teko", sans-serif;
+  font-family: 'Teko', sans-serif;
   color: var(--bg-dark);
   position: absolute;
   z-index: -1;
@@ -136,7 +135,7 @@ p {
   transform: translateY(-3px);
 }
 .icons-home::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   left: 11px;
@@ -147,7 +146,7 @@ p {
 }
 .icons-home a:nth-child(1) {
   animation-delay: 1100ms;
-} 
+}
 .icons-home a:nth-child(2) {
   animation-delay: 1200ms;
 }
@@ -178,7 +177,7 @@ p {
   display: none;
 }
 
-.pop-up button{
+.pop-up button {
   cursor: pointer;
   width: 80px;
   height: 30px;
@@ -197,20 +196,20 @@ p {
   z-index: 2;
 }
 
-.page-navigation a { 
+.page-navigation a {
   width: 24px;
   height: 24px;
-  transition: all 0.3s;
+  transition: 0.3s;
   position: absolute;
   left: -1px;
 }
 
 #page-link1 {
-  top: -27px;
+  top: -37px;
 }
 
 #page-link2 {
-  bottom: -30px;
+  bottom: -40px;
 }
 
 .disable-link {
@@ -219,21 +218,21 @@ p {
   cursor: normal;
 }
 
-
-.page-navigation:hover a:first-child {
-  transform: translateY(-5px);
+/* .page-navigation:hover a {
+  transition: 2.3s !important;
+  transform: translateY(-5px) !important;
 }
 .page-navigation:hover a:last-child {
-  transform: translateY(5px);
-}
-.page-navigation:hover a svg polyline {
+  transform: translateY(5px) !important;
+} */
+.page-navigation:hover a svg polyline{
   transition: 0.3s;
   stroke: var(--heading);
 }
 
 svg polyline {
   fill: none;
-  stroke: var(--secondary);
+  stroke: var(--primary);
   stroke-width: 2;
   transition: 300ms;
 }
@@ -268,9 +267,6 @@ svg line {
   cursor: default;
   user-select: none;
 }
-
-
-
 
 .section-header {
   font-size: 40px;
@@ -309,16 +305,14 @@ svg line {
   transition: 300ms;
 }
 
-
-
 .active-menu-button .line:nth-child(1) {
   transform: translateY(8px) rotate(-45deg);
 }
 .active-menu-button .line:nth-child(2) {
   opacity: 0;
-}      
+}
 .active-menu-button .line:nth-child(3) {
-  transform: translateY(-8px) rotate(45deg) ;
+  transform: translateY(-8px) rotate(45deg);
 }
 
 .active-menu {
@@ -326,14 +320,13 @@ svg line {
   transform: none !important;
 }
 
-.menu-animatable.menu { 
+.menu-animatable.menu {
   transition: all 230ms ease-in;
 }
 
-.active-menu.menu-animatable { 
+.active-menu.menu-animatable {
   transition: all 300ms ease-out;
-}  
-
+}
 
 nav {
   width: 100%;
@@ -352,7 +345,7 @@ nav {
   -webkit-box-shadow: 10px 5px 11px -2px var(--shadow-nav);
   -moz-box-shadow: 10px 5px 11px -2px var(--shadow-nav);
   box-shadow: 10px 5px 11px -2px var(--shadow-nav);
-  z-index: 999;
+  z-index: 4;
 }
 
 nav ul {
@@ -389,16 +382,12 @@ nav ul li a {
   letter-spacing: 2px;
 }
 
-
-
 /* nav ul li:nth-child(5) a {
   padding: 0 10px;
   border: 2px solid var(--heading);
 } */
 nav ul li:nth-child(5) a {
-
 }
-
 
 nav ul li a span {
   color: var(--heading);
@@ -438,7 +427,7 @@ nav ul li a:hover {
 }
 
 .theme-switch input {
-  display:none;
+  display: none;
 }
 
 .slider {
@@ -449,17 +438,17 @@ nav ul li a:hover {
   position: absolute;
   right: 0;
   top: 0;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .slider:before {
   background-color: var(--bg-dark);
   bottom: 2px;
-  content: "";
+  content: '';
   height: 14px;
   left: 2px;
   position: absolute;
-  transition: .4s;
+  transition: 0.4s;
   width: 14px;
 }
 
@@ -479,7 +468,6 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
-
 
 .intro {
   position: absolute;
@@ -517,12 +505,11 @@ input:checked + .slider:before {
   min-width: 230px;
   height: 250px;
   position: relative;
-  background: url("./img/us.jpg") no-repeat center center / cover;
-
+  background: url('./img/us.jpg') no-repeat center center / cover;
 }
 
 .glitch {
-  background: url("./img/us.jpg") no-repeat center center / cover;
+  background: url('./img/us.jpg') no-repeat center center / cover;
   background-blend-mode: none;
   background-color: transparent;
   width: calc(100% + 10px);
@@ -540,8 +527,6 @@ input:checked + .slider:before {
   animation-fill-mode: forwards;
 }
 
-
-
 .profile-img:hover .glitch:nth-child(1) {
   animation-name: glitch-anim-1;
   z-index: 1;
@@ -550,7 +535,7 @@ input:checked + .slider:before {
 .profile-img:hover .glitch:nth-child(2) {
   animation-name: glitch-anim-2;
   z-index: 1;
-} 
+}
 
 .profile-img:hover .glitch:nth-child(3) {
   animation-name: glitch-anim-3;
@@ -558,33 +543,33 @@ input:checked + .slider:before {
 }
 
 @keyframes glitch-anim-1 {
-	0% { 
-		opacity: 1;
-		transform: translate3d(10px, 0, 0) scale3d(1, 1, 1);
-		clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
-	}
-  
-	20% {
-		clip-path: polygon(0 99%, 100% 99%, 100% 100%, 0% 100%);
-	}
-  
-	30% {
-		clip-path: polygon(0 84%, 100% 84%, 100% 85%, 0% 85%);
-	}
-  
-	40% {
-		clip-path: polygon(0 55%, 100% 55%, 100% 55%, 0% 55%);
-	}
-  
-	50% {
-		clip-path: polygon(0 92%, 100% 92%, 100% 90%, 0% 90%);
-	}
-  
-	55% {
-		clip-path: polygon(0 95%, 100% 95%, 100% 94%, 0% 94%);
-	}
-  
-	60% {
+  0% {
+    opacity: 1;
+    transform: translate3d(10px, 0, 0) scale3d(1, 1, 1);
+    clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
+  }
+
+  20% {
+    clip-path: polygon(0 99%, 100% 99%, 100% 100%, 0% 100%);
+  }
+
+  30% {
+    clip-path: polygon(0 84%, 100% 84%, 100% 85%, 0% 85%);
+  }
+
+  40% {
+    clip-path: polygon(0 55%, 100% 55%, 100% 55%, 0% 55%);
+  }
+
+  50% {
+    clip-path: polygon(0 92%, 100% 92%, 100% 90%, 0% 90%);
+  }
+
+  55% {
+    clip-path: polygon(0 95%, 100% 95%, 100% 94%, 0% 94%);
+  }
+
+  60% {
     clip-path: polygon(0 70%, 100% 70%, 100% 71%, 0% 71%);
     /* filter: hue-rotate(90deg); */
   }
@@ -592,98 +577,93 @@ input:checked + .slider:before {
   65% {
     clip-path: polygon(0 75%, 100% 75%, 100% 76%, 0% 76%);
     /* filter: hue-rotate(90deg); */
-	}
+  }
 
- 	70% {
+  70% {
+    clip-path: polygon(0 70%, 100% 70%, 100% 69%, 0% 69%);
+  }
 
-		clip-path: polygon(0 70%, 100% 70%, 100% 69%, 0% 69%);
-	}
+  80% {
+    clip-path: polygon(0 89%, 100% 89%, 100% 90%, 0% 90%);
+  }
 
-	80% {
-		clip-path: polygon(0 89%, 100% 89%, 100% 90%, 0% 90%);
-	}
+  85% {
+    clip-path: polygon(0 75%, 100% 75%, 100% 75%, 0 75%);
+  }
 
-	85% {
-		clip-path: polygon(0 75%, 100% 75%, 100% 75%, 0 75%);
-	}
-
-	95% {
+  95% {
     clip-path: polygon(0 72%, 100% 72%, 100% 78%, 0 78%);
-  } 
+  }
   100% {
     opacity: 0;
   }
 }
 
 @keyframes glitch-anim-2 {
-	0% { 
-		transform: translate3d(2px, 0, 0);
-		clip-path: polygon(0 25%, 100% 25%, 100% 30%, 0 30%);
-	}
-  
-	10% {
-		clip-path: polygon(0 3%, 100% 3%, 100% 3%, 0 3%);
-	}
-  
-	15% {
-		clip-path: polygon(0 5%, 100% 5%, 100% 20%, 0 20%);
-	}
-  
-	17% {
+  0% {
+    transform: translate3d(2px, 0, 0);
+    clip-path: polygon(0 25%, 100% 25%, 100% 30%, 0 30%);
+  }
+
+  10% {
+    clip-path: polygon(0 3%, 100% 3%, 100% 3%, 0 3%);
+  }
+
+  15% {
+    clip-path: polygon(0 5%, 100% 5%, 100% 20%, 0 20%);
+  }
+
+  17% {
     clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
-	}
-  
-	19% {
-		clip-path: polygon(0 40%, 100% 40%, 100% 40%, 0 40%);
-	}
-  
-	33% {
+  }
+
+  19% {
+    clip-path: polygon(0 40%, 100% 40%, 100% 40%, 0 40%);
+  }
+
+  33% {
     clip-path: polygon(0 52%, 100% 52%, 100% 59%, 0 59%);
+  }
 
-	}
-  
-	35% {
-		clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
-	}
-  
-	40% {
+  35% {
+    clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
+  }
+
+  40% {
     clip-path: polygon(0 75%, 100% 75%, 100% 75%, 0 75%);
+  }
 
-	}
-  
-	45% {
-		clip-path: polygon(0 65%, 100% 65%, 100% 40%, 0 40%);
-	}
-  
-	49% {
+  45% {
+    clip-path: polygon(0 65%, 100% 65%, 100% 40%, 0 40%);
+  }
+
+  49% {
     clip-path: polygon(0 45%, 100% 45%, 100% 50%, 0 50%);
-    
-	}
-  
-	50% {
-		clip-path: polygon(0 14%, 100% 14%, 100% 33%, 0 33%);
-	}
-  
-	55% {
+  }
+
+  50% {
+    clip-path: polygon(0 14%, 100% 14%, 100% 33%, 0 33%);
+  }
+
+  55% {
     clip-path: polygon(0 15%, 100% 15%, 100% 35%, 0 35%);
-    
-	}
-  
-	60% {
+  }
+
+  60% {
     clip-path: polygon(0 15%, 100% 15%, 100% 15%, 0 15%);
     /* filter: hue-rotate(90deg); */
-	}
-  
-	70% {
+  }
+
+  70% {
     clip-path: polygon(0 65%, 100% 65%, 100% 60%, 0 60%);
     /* filter: hue-rotate(90deg); */
-	}
-  
-	80% {
-		clip-path: polygon(0 80%, 100% 80%, 100% 85%, 0 85%);
-	}
-  
-	90% {
+  }
+
+  80% {
+    clip-path: polygon(0 80%, 100% 80%, 100% 85%, 0 85%);
+  }
+
+  90% {
     clip-path: polygon(0 55%, 100% 55%, 100% 65%, 0 65%);
   }
   100% {
@@ -692,81 +672,81 @@ input:checked + .slider:before {
 }
 
 @keyframes glitch-anim-3 {
-	0% {
-		opacity: 1;
-		transform: translate3d(0, -2px, 0) scale3d(1, 1, 1);
-		clip-path: polygon(0 1%, 100% 1%, 100% 3%, 0 3%);
-	}
-  
-	5% {
-		clip-path: polygon(0 10%, 100% 10%, 100% 9%, 0 9%);
-	}
-  
-	11% {
-		clip-path: polygon(0 5%, 100% 5%, 100% 6%, 0 6%);
-	}
-  
-	20% {
-		clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
-	}
-  
-	25% {
-		clip-path: polygon(0 10%, 100% 10%, 100% 10%, 0 10%);
-	}
-  
-	35% {
-		clip-path: polygon(0 30%, 100% 30%, 100% 25%, 0 25%);
-	}
-  
-	42% {
-		clip-path: polygon(0 15%, 100% 15%, 100% 16%, 0 16%);
-	}
-  
-	48% {
-		clip-path: polygon(0 40%, 100% 40%, 100% 39%, 0 39%);
-	}
-  
-	50% {
-		clip-path: polygon(0 20%, 100% 20%, 100% 21%, 0 21%);
-	}
-  
-	56% {
-		clip-path: polygon(0 60%, 100% 60%, 100% 55%, 0 55%);
-	}
-  
-	61% {
-		clip-path: polygon(0 30%, 100% 30%, 100% 31%, 0 31%);
-	}
-  
-	68% {
-		clip-path: polygon(0 70%, 100% 70%, 100% 69%, 0 69%);
-	}
-  
-	72% {
-		clip-path: polygon(0 40%, 100% 40%, 100% 41%, 0 41%);
-	}
-  
-	77% {
-		clip-path: polygon(0 80%, 100% 80%, 100% 75%, 0 75%);
-	}
-  
-	81% {
-		clip-path: polygon(0 50%, 100% 50%, 100% 51%, 0 51%);
-	}
-  
-	86% {
-		clip-path: polygon(0 90%, 100% 90%, 100% 90%, 0 90%);
-	}
-  
-	90% {
-		clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
-	}
-  
-	92% {
-		clip-path: polygon(0 100%, 100% 100%, 100% 99%, 0 99%);
-	}
-  
-	94% {
+  0% {
+    opacity: 1;
+    transform: translate3d(0, -2px, 0) scale3d(1, 1, 1);
+    clip-path: polygon(0 1%, 100% 1%, 100% 3%, 0 3%);
+  }
+
+  5% {
+    clip-path: polygon(0 10%, 100% 10%, 100% 9%, 0 9%);
+  }
+
+  11% {
+    clip-path: polygon(0 5%, 100% 5%, 100% 6%, 0 6%);
+  }
+
+  20% {
+    clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
+  }
+
+  25% {
+    clip-path: polygon(0 10%, 100% 10%, 100% 10%, 0 10%);
+  }
+
+  35% {
+    clip-path: polygon(0 30%, 100% 30%, 100% 25%, 0 25%);
+  }
+
+  42% {
+    clip-path: polygon(0 15%, 100% 15%, 100% 16%, 0 16%);
+  }
+
+  48% {
+    clip-path: polygon(0 40%, 100% 40%, 100% 39%, 0 39%);
+  }
+
+  50% {
+    clip-path: polygon(0 20%, 100% 20%, 100% 21%, 0 21%);
+  }
+
+  56% {
+    clip-path: polygon(0 60%, 100% 60%, 100% 55%, 0 55%);
+  }
+
+  61% {
+    clip-path: polygon(0 30%, 100% 30%, 100% 31%, 0 31%);
+  }
+
+  68% {
+    clip-path: polygon(0 70%, 100% 70%, 100% 69%, 0 69%);
+  }
+
+  72% {
+    clip-path: polygon(0 40%, 100% 40%, 100% 41%, 0 41%);
+  }
+
+  77% {
+    clip-path: polygon(0 80%, 100% 80%, 100% 75%, 0 75%);
+  }
+
+  81% {
+    clip-path: polygon(0 50%, 100% 50%, 100% 51%, 0 51%);
+  }
+
+  86% {
+    clip-path: polygon(0 90%, 100% 90%, 100% 90%, 0 90%);
+  }
+
+  90% {
+    clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
+  }
+
+  92% {
+    clip-path: polygon(0 100%, 100% 100%, 100% 99%, 0 99%);
+  }
+
+  94% {
     clip-path: polygon(0 70%, 100% 70%, 100% 71%, 0 71%);
   }
   100% {
@@ -805,7 +785,7 @@ input:checked + .slider:before {
 .tech-list {
   padding: 20px 0;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .tech-list p {
@@ -816,7 +796,6 @@ input:checked + .slider:before {
   color: var(--scrollbar);
   font-weight: bold;
 }
-
 
 /* ******************************************** contact start */
 
@@ -866,7 +845,6 @@ textarea {
   caret-color: var(--primary);
 }
 
-
 form {
   position: relative;
 }
@@ -888,7 +866,7 @@ form input:last-child {
 }
 
 form input:last-child:hover {
-  filter: contrast(80%)
+  filter: contrast(80%);
 }
 
 label {
@@ -916,7 +894,7 @@ label {
 }
 
 #input-name:focus,
-#input-name:not(:placeholder-shown)  {
+#input-name:not(:placeholder-shown) {
   border-bottom: 1px solid var(--heading);
 }
 
@@ -953,9 +931,8 @@ textarea:focus ~ #label-message {
   color: var(--heading);
 }
 
-
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
+input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
@@ -991,7 +968,7 @@ select:-webkit-autofill:focus {
   margin: 10px auto;
   position: relative;
   /* border: 5px solid var(--bg-color); */
-    -webkit-box-shadow: 10px 10px 11px -2px var(--shadow-nav);
+  -webkit-box-shadow: 10px 10px 11px -2px var(--shadow-nav);
   -moz-box-shadow: 10px 10px 11px -2px var(--shadow-nav);
   box-shadow: 10px 10px 11px -2px var(--shadow-nav);
 
@@ -1030,10 +1007,6 @@ select:-webkit-autofill:focus {
   top: 10px;
   background: var(--heading);
 }
-
-
-
-
 
 .project img {
   width: 100%;
@@ -1145,8 +1118,8 @@ select:-webkit-autofill:focus {
 
 .info-button:hover svg rect {
   /* animation: info-btn-anim 300ms linear forwards; */
-    stroke-dasharray: 141 5;
-    stroke-dashoffset: 161.5;
+  stroke-dasharray: 141 5;
+  stroke-dashoffset: 161.5;
 }
 
 .project:hover .project-title,
@@ -1191,7 +1164,6 @@ select:-webkit-autofill:focus {
   outline: none;
   z-index: 3;
   cursor: pointer;
-
 }
 
 button svg {
@@ -1199,7 +1171,7 @@ button svg {
 }
 
 .modul-close-button line {
-  stroke: var(--primary)
+  stroke: var(--primary);
 }
 
 .carousel {
@@ -1211,7 +1183,6 @@ button svg {
 }
 
 .title-and-tech {
-
 }
 
 .fake-title {
@@ -1220,15 +1191,16 @@ button svg {
   display: none;
 }
 
-.inner { 
+.inner {
   width: 300%;
   height: 250px;
   transform: translateX(-320px);
   position: relative;
 }
 
-
-.box1, .box2, .box3 {
+.box1,
+.box2,
+.box3 {
   width: 340px;
   height: 100%;
   position: absolute;
@@ -1238,7 +1210,9 @@ button svg {
   overflow: hidden;
 }
 
-.box1 img, .box2 img, .box3 img {
+.box1 img,
+.box2 img,
+.box3 img {
   width: 100%;
   height: 100%;
 }
@@ -1251,7 +1225,7 @@ button svg {
 }
 .active {
   transition: all 550ms ease;
-  transform: translate(-100%, -0px)!important;
+  transform: translate(-100%, -0px) !important;
   z-index: 1;
 }
 
@@ -1263,12 +1237,11 @@ button svg {
 }
 
 .active img {
-  transition: 300ms; 
+  transition: 300ms;
 }
 .active img:hover {
   transform: scale(1.2);
 }
-
 
 .carousel-navigation {
   /* position: absolute; */
@@ -1330,7 +1303,7 @@ button svg {
   left: -4px;
   z-index: 1;
 }
-.project-modul-info svg polyline { 
+.project-modul-info svg polyline {
   fill: none;
   stroke: var(--heading);
   stroke-width: 9;
@@ -1357,7 +1330,7 @@ button svg {
   border-radius: 4px;
   padding: 3px 10px;
   margin: 3px 4px;
-} 
+}
 
 #modul-description {
   height: 125px;
@@ -1385,7 +1358,6 @@ button svg {
   background: var(--heading);
 }
 
-
 #demo-git-buttons {
   position: absolute;
   bottom: 8px;
@@ -1398,20 +1370,21 @@ button svg {
   z-index: 4 !important;
 }
 
-#git-link, #demo-link {
+#git-link,
+#demo-link {
   z-index: 3;
 }
 #demo-git-buttons a svg {
   position: unset;
   fill: var(--primary);
   margin: 0 10px;
-  transition: 0,3s;
+  transition: 0, 3s;
   pointer-events: none;
   transition: 300ms;
 }
 
 #demo-git-buttons a:hover svg {
-  fill: var(--heading)
+  fill: var(--heading);
 }
 
 /* *************************************** animations */
@@ -1432,14 +1405,14 @@ button svg {
 
 @keyframes fade-enter-anim {
   100% {
-    transition: 300ms;
+    /* transition: 300ms; */
     transform: translateY(0);
     opacity: 1;
   }
 }
 
 /* *********************************************** media query */
-@media(max-width: 1050px) {
+@media (max-width: 1050px) {
   section {
     padding: 50px 80px 100px 80px;
   }
@@ -1458,7 +1431,7 @@ button svg {
   }
 }
 
-@media(max-width: 800px) {
+@media (max-width: 800px) {
   .theme-switch-wrapper {
     position: absolute;
     left: 20px;
@@ -1547,7 +1520,7 @@ button svg {
     left: 10px;
   }
   .inner {
- /*    width: 300%;
+    /*    width: 300%;
     height: 280px; */
     transform: translateX(-340px);
   }
@@ -1616,9 +1589,7 @@ button svg {
   }
 }
 
-
-
-@media(max-width: 500px) {
+@media (max-width: 500px) {
   section {
     padding: 0 45px 0 45px;
   }
@@ -1630,7 +1601,7 @@ button svg {
     width: 80%;
     top: 105%;
   }
-  
+
   .menu-button {
     top: 15px;
     right: 10px;
@@ -1641,7 +1612,7 @@ button svg {
   .icons-home {
     left: 5px;
   }
-  
+
   .project-modul {
     max-width: 95%;
   }
@@ -1657,24 +1628,26 @@ button svg {
     height: 245px;
     transform: translateX(-330px);
   }
-  .box1, .box2, .box3 {
+  .box1,
+  .box2,
+  .box3 {
     width: 330px;
   }
   .project-modul-info {
-    width: 100%
+    width: 100%;
   }
 
   .intro {
     padding: 0 60px 0 60px;
   }
   .intro h1 {
-    font-size: 30px;
+    font-size: 34px;
     margin: 0 auto;
     left: unset;
     text-align: center;
   }
   .intro h2 {
-    font-size: 28px;
+    font-size: 24px;
     padding-bottom: 15px;
     text-align: center;
   }
@@ -1698,8 +1671,12 @@ button svg {
     background: var(--bg-color);
     box-shadow: none;
   }
-  input,label,textarea,
-  input:focus,label:focus,textarea:focus {
+  input,
+  label,
+  textarea,
+  input:focus,
+  label:focus,
+  textarea:focus {
     background: var(--bg-color);
   }
   .tech-list p {
@@ -1735,7 +1712,7 @@ button svg {
   }
 }
 
-@media(max-width: 370px) {
+@media (max-width: 370px) {
   section {
     padding: 0 35px 0 35px;
   }
@@ -1753,13 +1730,15 @@ button svg {
   }
   .carousel {
     width: 300px;
-    height: 260px
+    height: 260px;
   }
   .inner {
     height: 230px;
     transform: translateX(-300px);
   }
-  .box1, .box2, .box3 {
+  .box1,
+  .box2,
+  .box3 {
     width: 300px;
   }
 
