--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Teko:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@400;600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;1,400;1,800&display=swap');
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&display=swap'); */
+
 * {
   margin: 0;
   padding: 0;
@@ -17,7 +18,6 @@ html {
   --bg-dark: #1e2127;
   --secondary: #eeeeee;
   --heading: #34cceb;
-  /* --heading: #29a5ce; */
   --scrollbar: #858585;
   --scrollbar-track: #4b4a4a;
   --menu-color: #131416;
@@ -31,7 +31,6 @@ html {
   --bg-dark: #b9b9b7;
   --secondary: #3d4250;
   --heading: #ce7329;
-  /* --heading: #29a5ce; */
   --scrollbar: #4b4a4a;
   --scrollbar-track: #858585;
   --menu-color: #dfdede;
@@ -42,7 +41,6 @@ body {
   background: var(--bg-color);
   color: var(--primary);
   font-family: 'Montserrat', sans-serif;
-  /* filter: invert(100%); */
 }
 
 section {
@@ -183,8 +181,6 @@ p {
   height: 30px;
   background-color: var(--primary);
   color: var(--bg-dark);
-  /* margin: 0 auto; */
-
   margin-top: 10px;
 }
 
@@ -225,7 +221,7 @@ p {
 .page-navigation:hover a:last-child {
   transform: translateY(5px) !important;
 } */
-.page-navigation:hover a svg polyline{
+.page-navigation:hover a svg polyline {
   transition: 0.3s;
   stroke: var(--heading);
 }
@@ -794,7 +790,7 @@ input:checked + .slider:before {
   margin-bottom: 10px;
   background: var(--bg-dark);
   color: var(--scrollbar);
-  font-weight: bold;
+  font-weight: 800;
 }
 
 /* ******************************************** contact start */
